--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group 'com.1v0.dev'
-version '1.0'
+version '0.1'
 
 sourceCompatibility = 1.8
 
@@ -22,6 +22,5 @@ intellij {
 }
 patchPluginXml {
     changeNotes """
-      Add change notes here.<br>
-      <em>most HTML tags may be used</em>"""
+      Initial Release</em>"""
 }
