--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 plugins {
     id 'java'
-    id 'org.jetbrains.intellij' version '0.4.16'
+    id 'org.jetbrains.intellij' version '0.4.18'
 }
 
 group 'com.1v0.dev'
-version '0.3.0'
+version '0.3.1'
 
 sourceCompatibility = 1.8
 
@@ -18,12 +18,12 @@ dependencies {
 
 // See https://github.com/JetBrains/gradle-intellij-plugin/
 intellij {
-    version '2019.3'
+    version '2020.1'
 }
 patchPluginXml {
     sinceBuild '191'
     changeNotes """
-      Add option to set default arguments to be passed to hugo new"""
+      Add support for intellij 2020.1"""
 }
 
 publishPlugin {
