--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group 'com.1v0.dev'
-version '0.4.0'
+version '0.4.1'
 
 sourceCompatibility = 1.8
 
@@ -18,13 +18,12 @@ dependencies {
 
 // See https://github.com/JetBrains/gradle-intellij-plugin/
 intellij {
-    version '2020.3'
+    version '2021.1'
 }
 patchPluginXml {
     sinceBuild '192'
     changeNotes """
-      Add option to auto format file name for Hugo New
-      Add option to create a bundle instead of a file for Hugo New"""
+      Add support for version 2021.1"""
 }
 
 publishPlugin {
